; ModuleID = '/home/carl/AnghaBench/reactos/sdk/tools/hhpcomp/chmc/extr_chmc.c_chmc_pmgl_create.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/tools/hhpcomp/chmc/extr_chmc.c_chmc_pmgl_create.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.chmcPmglChunkNode = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.chmcPmglChunkNode* @chmc_pmgl_create() #0 {
  %1 = alloca %struct.chmcPmglChunkNode*, align 8
  %2 = call %struct.chmcPmglChunkNode* @malloc(i32 4)
  store %struct.chmcPmglChunkNode* %2, %struct.chmcPmglChunkNode** %1, align 8
  %3 = load %struct.chmcPmglChunkNode*, %struct.chmcPmglChunkNode** %1, align 8
  %4 = icmp ne %struct.chmcPmglChunkNode* %3, null
  br i1 %4, label %5, label %8

5:                                                ; preds = %0
  %6 = load %struct.chmcPmglChunkNode*, %struct.chmcPmglChunkNode** %1, align 8
  %7 = call i32 @chmc_pmgl_init(%struct.chmcPmglChunkNode* %6)
  br label %8

8:                                                ; preds = %5, %0
  %9 = load %struct.chmcPmglChunkNode*, %struct.chmcPmglChunkNode** %1, align 8
  ret %struct.chmcPmglChunkNode* %9
}

declare dso_local %struct.chmcPmglChunkNode* @malloc(i32) #1

declare dso_local i32 @chmc_pmgl_init(%struct.chmcPmglChunkNode*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
